# docker-icloudpd

./: .gitignore  Dockerfile  README.md  docker-compose.example.yml
.github/workflows/: ci.yml  icloudpd-autorelease.yml
docker/: docker-compose.example.yml
docs/: legacy-audit.md
scripts/: check_icloudpd_assumptions.py
supervisor/: README.md  pyproject.toml
supervisor/icloudpd_supervisor/: __init__.py  config.py  cookies.py  main.py  runner.py  scheduler.py  state.py  telegram.py  webui.py
supervisor/tests/: test_concurrency_lifecycle.py  test_config.py  test_cookies.py  test_instance_name.py  test_main_env.py  test_reauth_death_recovery.py  test_runner.py  test_scheduler.py  test_security_review.py  test_telegram.py  test_webui.py  test_webui_protocol_fidelity.py
